chore: fix homepage spacing inconsistency

--- a/src/styles/_container.scss
+++ b/src/styles/_container.scss
@@ -19,7 +19,7 @@
     width: 100%;
     border-top: 1px solid var(--color-light-gray);
     border-bottom: 1px solid var(--color-light-gray);
-    margin-bottom: 48px;
+    // margin-bottom: 48px;
   }
 }
 
