--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,5 +13,5 @@ $grid-gutter: 24px;
   --font-size-base: 2rem;
   --grid-column: $grid-columns;
   --grid-gutter: $grid-gutters;
-  --grid-container-width: 1560px;
+  --grid-container-width: 1780px;
 }
